        + Extensive first_free subnet calls search speedup;
        + POST transaction locking;
        + All first_free and first_address responses are now "data" instead of "ip" and "subnet" for consistency;
        + Subnet splitting now copies over custom fields values by default (user custom_fields=no to revert);
        + New methods:
            + users:
                GET    /user/expires/                         // returns token expiration date
                GET    /user/token-expires/                   // returns token expiration date
                GET    /user/users/                           // returns all users (rwa app permissions required)
                GET    /user/admins/                          // returns all admin users (rwa app permissions required)
            + addresses:
                GET    /addresses/first_free/{subnetId}/      // returns first available address (subnetId can be provided with parameters)
                GET    /addresses/{ip}/{subnetId}/            // returns IP address from subnet
                GET    /addresses/search/{hostname}/          // Will search addresses by hostname
                DELETE /addresses/{ip}/{subnetId}/            // deletes IP address from subnet
                POST   /addresses/first_free/{subnetId}/      // will search for first free address in subnet, creating new address
            + subnets:
                GET    /subnets/{id}/addresses/{ip}/          // returns IP address from subnet
                GET    /subnets/{id}/first_free/              // returns first free address in subnet
                GET    /subnets/{id}/first_subnet/{mask}/     // returns first available subnets with specified mask
                GET    /subnets/{id}/all_subnets/{mask}/      // returns all available subnets with specified mask
                POST   /subnets/{id}/first_subnet/{mask}/     // creates first free subnet under master with specified mask