@@ -34,6 +34,8 @@ $all_apis = $Admin->fetch_all_objects("api");
 	    print "<th>"._('App security').'</th>';
 	    print "<th>"._('Transaction locking').'</th>';
 	    print "<th>"._('Lock timeout').'</th>';
+	    print "<th>"._('Nest custom fields').'</th>';
+	    print "<th>"._('Show links').'</th>';
 	    print "<th>"._('Comment').'</th>';
 	    print '<th></th>';
 		print '</tr>';
@@ -61,8 +63,10 @@ $all_apis = $Admin->fetch_all_objects("api");
 			# wait update
 			$a['app_lock_wait'] = $a['app_lock']==1 ? $a['app_lock_wait']." sec" : "/";
 
-			# reformat lock
-			$a['app_lock'] = $a['app_lock']==1 ? _("Yes") : _("No");
+			# reformat lock and nesting
+			$a['app_lock']               = $a['app_lock']==1 ? _("Yes") : _("No");
+			$a['app_nest_custom_fields'] = $a['app_nest_custom_fields']==1 ? _("Yes") : _("No");
+			$a['app_show_links'] 		 = $a['app_show_links']==1 ? _("Yes") : _("No");
 
 			# override permissions if user
 			if($a['app_security']=="user")	{ $a['app_permissions']="<span class='text-muted'>"._('Per user')."</span>"; }
@@ -71,6 +75,8 @@ $all_apis = $Admin->fetch_all_objects("api");
 			print '	<td>' . ucwords($a['app_security']) . '</td>'. "\n";
 			print '	<td>' . $a['app_lock'] . '</td>'. "\n";
 			print '	<td>' . $a['app_lock_wait'] . '</td>'. "\n";
+			print '	<td>' . $a['app_nest_custom_fields'] . '</td>'. "\n";
+			print '	<td>' . $a['app_show_links'] . '</td>'. "\n";
 			print '	<td>' . $a['app_comment'] . '</td>'. "\n";
 
 			# add/remove APIs
@@ -122,4 +128,3 @@ $all_apis = $Admin->fetch_all_objects("api");
 } else {
 	$Result->show("info", _('Please enable API module under server management'), false);
 }
-?>
