@@ -778,3 +778,7 @@ UPDATE `lang` SET `l_code` = 'en_US.UTF-8' WHERE `l_code` = 'en_US.UTF8';
 
 /* Russian traslation */
 INSERT INTO `lang` (`l_name`, `l_code`) VALUES ('Russian', 'ru_RU.UTF-8');
+
+/* Add option to show custom field results as nested and show links default */
+ALTER TABLE `api` ADD `app_nest_custom_fields` TINYINT(1)  NULL  DEFAULT '0';
+ALTER TABLE `api` ADD `app_show_links` TINYINT(1)  NULL  DEFAULT '0';
